[package]
name = "jsonkeycompare"
description = "A very simple program that compares two or more JSON files and reports any keys that are present in the first file but not in any of the other files."
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"

[dependencies]
colored = "2.1.0"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "jsonkeycompare"
path = "src/main.rs"